# hours

./: .gitignore  README.md  pyproject.toml
schedule/: settings.py
static/: index.html
